# traefik-proxy

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  dev-requirements.txt  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: release.yaml  release.yml  test.yml
ci/: update_hashes.py
docs/: requirements.txt
docs/source/: changelog.md  changelog.rst  conf.py  consul.md  details.md  docker-compose.md  etcd.md  file.md  https.md  index.md  index.rst  install.md  redis.md  toml.md
docs/source/api/: index.md  index.rst
docs/sphinxext/: autodoc_traits.py
examples/: README.md  jupyterhub_config.py  jupyterhub_config_etcd.py  jupyterhub_config_file.py  jupyterhub_config_redis.py  jupyterhub_config_toml.py
examples/metrics/: README.md  jupyterhub_config.py  prometheus.yml
git-hooks/: README.md  install  pre-commit
hooks/: README.md  pre-commit
jupyterhub_traefik_proxy/: __init__.py  _version.py  checksums.txt  consul.py  dummy_http_server.py  etcd.py  fileprovider.py  install.py  kv_proxy.py  proxy.py  redis.py  toml.py  traefik_utils.py
jupyterhub_traefik_proxy/performance/: ProxyPerformance.ipynb  dummy_http_server.py  dummy_ws_server.py  performance_tests.py  proxy_perf.py
jupyterhub_traefik_proxy/performance/results/: chp_methods.csv  etcd_methods.csv  http_throughput_large.csv  (+3 more)
performance/: ProxyPerformance.ipynb  README.md  bootstrap-vm.sh  check_perf.py  dummy_http_server.py  dummy_ws_server.py  perf_utils.py  requirements.txt  run_benchmark.sh  run_benchmark_sequential.sh
performance/results/: chp-http_throughput_large.csv  chp-http_throughput_small.csv  chp-methods.csv  chp-ws_throughput_large.csv  chp-ws_throughput_small.csv  chp_methods_concurrent.csv  chp_methods_sequential.csv  consul-methods.csv  consul_methods_concurrent.csv  consul_methods_sequential.csv  etcd-methods.csv  etcd_methods_concurrent.csv  etcd_methods_sequential.csv  file-http_throughput_large.csv  file-http_throughput_small.csv  file-methods.csv  file-ws_throughput_large.csv  file-ws_throughput_small.csv  http_throughput_large.csv  http_throughput_small.csv  patched_consul_methods_concurrent.csv  patched_consul_methods_sequential.csv  redis-methods.csv  toml_methods_concurrent.csv  toml_methods_sequential.csv  ws_throughput.csv
tests/: conftest.py  dummy_http_server.py  proxytest.py  test_deprecations.py  test_dummy_http_server.py  test_etcd.py  test_installer.py  test_kv.py  test_proxy.py  test_traefik_api_auth.py  test_traefik_utils.py  traefik.toml  traefik_etcd_config.toml  utils.py
tests/config_files/: consul_config.json  pebble-config.json  test-cert.crt  test-key.key  traefik.toml  traefik_consul_config.json  traefik_consul_config.toml  traefik_etcd_config.toml  traefik_etcd_txns.txt
tests/toml_files/: traefik.toml  traefik_etcd_config.toml
(+15 files in other folders)
